--- a/src/modules/layout/header/navigation/navigation.njk
+++ b/src/modules/layout/header/navigation/navigation.njk
@@ -1,10 +1,11 @@
+{% set navigationLinks = ["food", "beer", "dessert"] %}
+
 <nav class="navigation wrapper" role="navigation">
   <ul class="navigation__menu">
-    <li class="navigation__menu-item navigation__active">
-      <a href="#{{navigationLink}}" class="navigation__link">{{navigationLink}}</a>
-    </li>
-    <li class="navigation__menu-item">
-      <a href="#{{navigationLink}}" class="navigation__link">{{navigationLink}}</a>
-    </li>
+    {% for navigationLink in navigationLinks %}
+      <li class="navigation__menu-item">
+        <a href="#{{navigationLink}}" class="navigation__link">{{navigationLink}}</a>
+      </li>
+    {% endfor %}
   </ul>
 </nav>
