--- a/src/modules/home/home.njk
+++ b/src/modules/home/home.njk
@@ -1,4 +1,7 @@
+{% set menuLink = "Главная" %}
+
 {% set pageName = 'home' %}
+{% set url = '/'%}
 {% set userTitle = 'Войти' %}
 {% set cartTitle = 'Корзина' %}
 {% set loginImg = 'user-login.svg' %}
