--- a/src/modules/layout/header/header.scss
+++ b/src/modules/layout/header/header.scss
@@ -1,6 +1,8 @@
 @use '../../../scss/vars.scss';
 
 @use 'subheader/subheader.scss';
+@use 'navigation/navigation.scss';
+@use 'cart/cart.scss';
 
 .header {
   background: var(--color-main-light);
