--- a/src/modules/layout/header/navigation/navigation.njk
+++ b/src/modules/layout/header/navigation/navigation.njk
@@ -1,10 +1,24 @@
-{% set navigationLinks = ["food", "beer", "dessert"] %}
+{% set navigationLinks = [
+  "Главная",
+  "Бюстгальтеры",
+  "Трусики",
+  "Колготки, чулки, леггинсы",
+  "Домашняя одежда",
+  "Носки, тапочки, ботфорты",
+  "Корректирующее белье",
+  "Трикотаж",
+  "Купальники",
+  "Детское",
+  "Мужчинам",
+  "Термобелье",
+  "Аксессуары"
+] %}
 
 <nav class="navigation wrapper" role="navigation">
   <ul class="navigation__menu">
     {% for navigationLink in navigationLinks %}
-      <li class="navigation__menu-item">
-        <a href="#{{navigationLink}}" class="navigation__link">{{navigationLink}}</a>
+      <li class="navigation__menu-item{{ ' active' if (navigationLink == menuLink) }}">
+        <a href="{{ url if (navigationLink == menuLink) }}" class="navigation__menu-link link">{{ navigationLink }}</a>
       </li>
     {% endfor %}
   </ul>
