--- a/src/modules/layout/header/subheader/subheader.scss
+++ b/src/modules/layout/header/subheader/subheader.scss
@@ -15,11 +15,16 @@
   height: 50%;
   display: flex;
   align-items: center;
+  cursor: pointer;
 }
 
 .subheader__icon {
   height: 100%;
-  cursor: pointer;
+  position: relative;
+
+  img {
+    height: 100%;
+  }
 }
 
 .subheader__title {
@@ -56,16 +61,32 @@
   display: flex;
   align-items: center;
 
-  // &:hover > .cart__hover {
-  //   display: grid;
+  &:hover > .cart-header {
+    display: grid;
 
-  //   &::before {
-  //     content: "";
-  //     height: 50px;
-  //     width: 100%;
-  //     position: absolute;
-  //     top: -50px;
-  //     right: 0;
-  //   }
-  // }
+    &::before {
+      content: "";
+      height: 50px;
+      width: 100%;
+      position: absolute;
+      top: -50px;
+      right: 0;
+    }
+  }
+}
+
+.subheader__cart-lenght {
+  position: absolute;
+  bottom: 1px;
+  right: .4rem;
+  background: var(--color-main-dark);
+  border-radius: 50%;
+  height: .9rem;
+  width: .9rem;
+  font-size: .6rem;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--color-white);
 }
