--- a/src/layout/head.njk
+++ b/src/layout/head.njk
@@ -8,7 +8,7 @@
     <meta name="description" content="Мета описание сайта">
     <meta name="keywords" content="Ключевые, слова, сайта">
     <meta name="author" content="Shartzzz">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="{{startPath}}style.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="./assets/favicon/favicon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="./assets/favicon/favicon.png">
