--- a/src/modules/banners/banner.scss
+++ b/src/modules/banners/banner.scss
@@ -10,6 +10,10 @@
   background-position: center;
   background-color: #fd8d9b;
   background-size: cover;
+
+  .wrapper {
+    height: 100%;
+  }
 }
 
 .banner__img {
