--- a/src/modules/footers/footer.njk
+++ b/src/modules/footers/footer.njk
@@ -12,10 +12,10 @@
     <div class="footer__product">
       <div class="product__list">
         <div class="product__card">
-          <img src="img/product.jpeg" alt="">
+          <img src="{{imgPath}}/product/product.jpeg" alt="">
         </div>
         <div class="product__card">
-          <img src="img/product.jpeg" alt="">
+          <img src="{{imgPath}}/product/product.jpeg" alt="">
         </div>
       </div>
       <div class="footer__subscribe">
