--- a/src/modules/headers/subheader/subheader.scss
+++ b/src/modules/headers/subheader/subheader.scss
@@ -78,16 +78,17 @@
 
 .subheader__cart-lenght {
   position: absolute;
-  bottom: 1px;
+  bottom: 0px;
   right: .35rem;
-  background: var(--color-main-dark);
-  border-radius: 50%;
+  // background: var(--color-main-dark);
+  // border-radius: 50%;
   height: .9rem;
   width: .9rem;
-  font-size: .6rem;
+  font-size: .7rem;
+  font-weight: 900;
   text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
-  color: var(--color-white);
+  // color: var(--color-main-dark);
 }
