--- a/src/modules/mains/main.scss
+++ b/src/modules/mains/main.scss
@@ -1,2 +1,4 @@
 @use './category/category.scss';
 @use './products/products.scss';
+@use './shop-description/shop-description.scss';
+@use './filters/filters.scss'
