--- a/src/modules/products/product.njk
+++ b/src/modules/products/product.njk
@@ -2,7 +2,7 @@
   <div class="product__img">
     <span class="span-new">Новинка</span>
     {# <span class="span-sale">Распродажа</span> #}
-    <img src="assets/img/product/product.jpeg" alt="">
+    <img src="{{startPath}}assets/img/product/product.jpeg" alt="">
   </div>
   <div class="product__details">
     <div class="product__details_buttons">
