--- a/src/scss/vars.scss
+++ b/src/scss/vars.scss
@@ -7,4 +7,7 @@
   --color-text-button: var(--color-white);
   --color-bg-button: var(--color-main-dark);
   --color-bg-button-white: var(--color-white);
+  --color-bg-text-block: #f6f6f6;
+  --color-tag: #d1d1d1;
+  --color-line: rgba(0, 0, 0, 0.205);
 }
