--- a/src/scss/modules.scss
+++ b/src/scss/modules.scss
@@ -4,3 +4,5 @@
 @use '../modules/products/product.scss';
 @use '../modules/news/news.scss';
 @use '../modules/footers/footer.scss';
+@use '../modules/brand-list/brand-list.scss';
+@use '../modules/breadcrumbs/breadcrumbs.scss';
