--- a/src/modules/breadcrumbs/breadcrumbs.njk
+++ b/src/modules/breadcrumbs/breadcrumbs.njk
@@ -1,6 +1,15 @@
 <nav class="breadcumbs">
   <ol class="breadcumbs__wrapper wrapper">
-    <li class="breadcumbs__item"><a href="#" class='link'>Магазин</a><span>›</span></li>
-    <li class="breadcumbs__item"><a href="#" class='link breadcumbs__item-active'>{{category}}</a><span class='breadcumbs__item-active'>↴</span></li>
+    <li class="breadcumbs__item">
+      <a href="#" class='link'>Главная</a>
+      <span>›</span></li>
+    {% if (pageName === 'shop') %}
+      <li class="breadcumbs__item">
+        <a href="#" class='link'>Магазин</a>
+        <span>›</span></li>
+    {% endif %}
+    <li class="breadcumbs__item">
+      <a href="#" class='link breadcumbs__item-active'>{{category}}</a>
+      <span class='breadcumbs__item-active'>↴</span></li>
   </ol>
 </nav>
