--- a/src/modules/headers/cart/cart.njk
+++ b/src/modules/headers/cart/cart.njk
@@ -1,22 +1,25 @@
 <div class="cart-header">
+<span class="cart-header__arrow"></span>
   <header class="cart-header__header">
-    <h4>Моя корзина:</h4>
-    <span>0 товаров</span>
+    <h4>Моя корзина</h4>
+    <i>(<span>{{cartCount}}</span>)</i>
   </header>
   <div class="cart-header__products-wrapper">
     <div class="cart-header__products-list">
-      <div class="cart-header__product">
-        product
-      </div>
+
+        {% include "../../products/product-min.njk" %}
+        {% include "../../products/product-min.njk" %}
+        {% include "../../products/product-min.njk" %}
+
     </div>
-    <div class="cart-header__summ">
-      <strong>Всего:</strong>
-      <strong>3 500,00 руб.</strong>
-    </div>
+  </div>
+  <div class="cart-header__summ">
+    <strong>Всего:</strong>
+    <strong>3 500,00 руб.</strong>
   </div>
   <div class="cart-header__buttons">
     <a href="/cart" class="button">Перейти в корзину</a>
-    <a href="/cart" class="button">Оформить заказ</a>
+    {# <a href="/cart" class="button">Оформить заказ</a> #}
   </div>
   <footer class="cart-header__footer">
     Все подробности о доставке и оплате можно прочитать <a href="">здесь</a>
