--- a/src/modules/mains/filters/filters.njk
+++ b/src/modules/mains/filters/filters.njk
@@ -27,7 +27,7 @@
     </div>
   </div>
 </div>
-<div class="shop-filters-tags wrapper">
+<div class="shop-filters-tags">
   Фильтры:
   <span class="tag">65H <a href="#" class='tag__close'><img src="../assets/img/close-tag.svg" alt=""></a>
   </span>
