--- a/src/modules/mains/main-shop.njk
+++ b/src/modules/mains/main-shop.njk
@@ -1,4 +1,4 @@
-<main class="main main_header">
+<main class="main main_{{pageName}}">
   {% block shopDescription %}
     {% include "./shop-description/shop-description.njk" %}
   {% endblock %}
