--- a/src/modules/headers/subheader/subheader.njk
+++ b/src/modules/headers/subheader/subheader.njk
@@ -9,10 +9,10 @@
         <img src="{{imgPath}}/{{searchImg}}" alt="поиск" class="subheader__icon subheader__icon-search">
       </div>
       <div class="subheader__cart">
-        <span class="subheader__title">{{cartTitle}}</span>
+        <span class="subheader__title"><i>{{cartTitle}} ₽</i></span>
         <div class="subheader__icon">
           <img src="{{imgPath}}/{{cartImg}}" alt="{{cartTitle}}">
-          <span class="subheader__cart-lenght"></span>
+          <span class="subheader__cart-lenght">{{cartCount}}</span>
         </div>
         {% include "../cart/cart.njk" %}
       </div>
