--- a/src/modules/mains/filters/filters.scss
+++ b/src/modules/mains/filters/filters.scss
@@ -30,10 +30,45 @@
 }
 
 .shop-filters-tags {
-  padding: 0.5rem 0;
+  padding: 0.5rem 1.5rem;
   border-bottom: 1px solid var(--color-line);
 
   span {
-    margin-left: .5rem;
+    margin-left: 0.5rem;
   }
+}
+
+.brafitting {
+  border: 1px solid;
+  border-radius: 0.5rem;
+  padding: 1rem;
+}
+
+.brafitting__title {
+  position: relative;
+  text-transform: uppercase;
+  display: grid;
+  padding-bottom: 10px;
+
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    border-bottom: 1px solid var(--color-line);
+  }
+}
+
+.brafitting__range-block {
+  display: grid;
+  height: 40%;
+  padding-top: 1rem;
+}
+
+.brafitting__range {
+  width: 100%;
+}
+
+.brafitting__result {
+  padding-top: 2rem;
 }
