--- a/src/modules/mains/products/products-shop.njk
+++ b/src/modules/mains/products/products-shop.njk
@@ -1,8 +1,12 @@
-<div class="products__list_shop wrapper">
+<div class="products__list products__list_{{pageName}} wrapper">
+  {% block brafitting %}
+    {% include "../filters/brafitting.njk" %}
+  {% endblock %}
   {% block product %}
     {% include "../../products/product.njk" %}
   {% endblock %}
 </div>
+
 {# <div class="products__all">
   <a href="#" class="link">Все товары --></a>
 </div> #}
