--- a/src/cart/index.njk
+++ b/src/cart/index.njk
@@ -9,7 +9,8 @@
 {% set pageName = 'cart' %}
 {% set url = '/cart'%}
 {% set userTitle = 'Войти' %}
-{% set cartTitle = '4.500,00' %}
+{% set cartPrice = '4.500,00' %}
+{% set cartTitle = cartPrice %}
 {% set loginImg = 'user-login.svg' %}
 {% set cartImg = 'cart.svg' %}
 {% set searchImg = 'search.svg' %}
