--- a/src/modules/carts/cart-header/cart-header.njk
+++ b/src/modules/carts/cart-header/cart-header.njk
@@ -15,11 +15,11 @@
   </div>
   <div class="cart-header__summ">
     <strong>Всего:</strong>
-    <strong>3 500,00 руб.</strong>
+    <strong>{{cartPrice}} руб.</strong>
   </div>
   <div class="cart-header__buttons">
     <a href="/cart" class="button">Перейти в корзину</a>
-    {# <a href="/cart" class="button">Оформить заказ</a> #}
+    <a href="/cart" class="button">Оформить заказ</a>
   </div>
   <footer class="cart-header__footer">
     Все подробности о доставке и оплате можно прочитать <a href="">здесь</a>
