--- a/src/modules/headers/subheader/subheader.njk
+++ b/src/modules/headers/subheader/subheader.njk
@@ -14,7 +14,7 @@
           <img src="{{imgPath}}/{{cartImg}}" alt="{{cartTitle}}">
           <span class="subheader__cart-lenght">{{cartCount}}</span>
         </div>
-        {% include "../cart/cart.njk" %}
+        {% include "../../carts/cart-header/cart-header-2.njk" %}
       </div>
     </div>
   </div>
