--- a/src/modules/mains/main-cart.njk
+++ b/src/modules/mains/main-cart.njk
@@ -2,4 +2,8 @@
   {% block cartDescription %}
     {% include "./shop-description/shop-description.njk" %}
   {% endblock %}
+
+  {% block cartContent %}
+    {% include "../carts/cart-content.njk" %}
+  {% endblock %}
 </main>
