--- a/src/scss/modules.scss
+++ b/src/scss/modules.scss
@@ -6,3 +6,4 @@
 @use '../modules/footers/footer.scss';
 @use '../modules/brand-list/brand-list.scss';
 @use '../modules/breadcrumbs/breadcrumbs.scss';
+@use '../modules/carts/cart.scss';
