--- a/src/scss/vars.scss
+++ b/src/scss/vars.scss
@@ -10,4 +10,5 @@
   --color-bg-text-block: #f6f6f6;
   --color-tag: #d1d1d1;
   --color-line: rgba(0, 0, 0, 0.205);
+  --color-bg-credit-card: var(--color-main-medium)
 }
