--- a/src/modules/headers/subheader/subheader.scss
+++ b/src/modules/headers/subheader/subheader.scss
@@ -61,7 +61,7 @@
   display: flex;
   align-items: center;
 
-  &:hover > .cart-header {
+  &:hover > .cart-header-2 {
     display: grid;
 
     &::before {
