--- a/src/modules/products/product.scss
+++ b/src/modules/products/product.scss
@@ -152,10 +152,10 @@
 .product-min {
   position: relative;
   display: flex;
-  background: var(--color-main-light);
+  background: #fff;
   border-radius: 0.5rem;
+  width: 300px;
   height: 120px;
-  width: 95%;
   margin-bottom: 1.5rem;
 }
 
