--- a/src/shop/index.njk
+++ b/src/shop/index.njk
@@ -2,12 +2,15 @@
 {% set startPath = '../' %}
 {% set imgPath = '../assets/img' %}
 
+{% set cartPrice = '4.500,00' %}
+{% set cartTitle = cartPrice %}
+{% set cartCount = '3' %}
+
 {% set category = "Бюстгальтеры" %}
 
 {% set pageName = 'shop' %}
 {% set url = '/shop'%}
 {% set userTitle = 'Войти' %}
-{% set cartTitle = 'Корзина' %}
 {% set loginImg = 'user-login.svg' %}
 {% set cartImg = 'cart.svg' %}
 {% set searchImg = 'search.svg' %}
