--- a/src/modules/filters/brafitting.njk
+++ b/src/modules/filters/brafitting.njk
@@ -1,4 +1,4 @@
-<div class="product brafitting">
+<div class="brafitting">
   <h2 class='brafitting__title'>Виртуальный брафиттинг</h2>
   <form class="brafitting__range-block">
     <label>Обхват груди, см: <span>0</span><input type="range" min="0" max="200" value="0" class="brafitting__range"></label>
