--- a/src/modules/mains/category/category.njk
+++ b/src/modules/mains/category/category.njk
@@ -1,6 +1,6 @@
 {% set pathImgCategory  = 'assets/img/category/' %}
 
-<section class="category category_home">
+<section class="category category_{{pageName}}">
   <h2 class="category__title">Категории</h2>
     <div class="category__slider">
       <a href="/shop" class="category__item"><img src="{{pathImgCategory}}бюстгальтеры.jpg" alt=""></a>
