--- a/src/modules/mains/main-cart.njk
+++ b/src/modules/mains/main-cart.njk
@@ -4,6 +4,6 @@
   {% endblock %}
 
   {% block cartContent %}
-    {% include "../carts/cart-content.njk" %}
+    {% include "../cart/cart-content.njk" %}
   {% endblock %}
 </main>
