--- a/src/scss/vars.scss
+++ b/src/scss/vars.scss
@@ -8,7 +8,10 @@
   --color-bg-button: var(--color-main-dark);
   --color-bg-button-white: var(--color-white);
   --color-bg-text-block: #f6f6f6;
+  --color-bg-new: #7fbfff;
+  --color-bg-sale: #ffcc3b;
   --color-tag: #d1d1d1;
+  --color-size: #e04693d5;
   --color-line: rgba(0, 0, 0, 0.205);
-  --color-bg-credit-card: var(--color-main-medium)
+  --color-bg-credit-card: var(--color-main-medium);
 }
