--- a/src/scss/components.scss
+++ b/src/scss/components.scss
@@ -5,6 +5,10 @@
 .link {
   text-decoration: none;
   color: unset;
+
+  &:hover {
+    text-decoration: underline;
+  }
 }
 
 // buttons
@@ -16,7 +20,7 @@
   text-transform: uppercase;
   padding: 15px;
   border-radius: 10px;
-  font-size: .9rem;
+  font-size: 0.9rem;
 
   box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.397);
 }
@@ -39,9 +43,9 @@
 
 .input {
   // height: 25px;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   border: none;
-  padding: .5rem;
+  padding: 0.5rem;
 }
 
 // tags
@@ -64,7 +68,7 @@
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  margin-left: .5rem;
+  margin-left: 0.5rem;
   // padding: 2.5px;
 
   img {
@@ -73,3 +77,20 @@
     width: 100%;
   }
 }
+
+.size {
+  background: var(--color-size);
+  padding: 2px 5px;
+  border-radius: 0 5px;
+  margin: 0.45rem 0.2rem 0 0.2rem;
+  color: #fff;
+  font-size: 0.9rem;
+  cursor: pointer;
+
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+
+  &:hover {
+    transform: scale(1.2);
+  }
+}
+
