--- a/src/scss/modules.scss
+++ b/src/scss/modules.scss
@@ -4,6 +4,7 @@
 @use '../modules/products/product.scss';
 @use '../modules/news/news.scss';
 @use '../modules/footers/footer.scss';
+@use '../modules/filters/filters.scss';
 @use '../modules/brand-list/brand-list.scss';
 @use '../modules/breadcrumbs/breadcrumbs.scss';
-@use '../modules/carts/cart.scss';
+@use '../modules/cart/cart.scss';
